--- a/ExportOptions.plist
+++ b/ExportOptions.plist
@@ -8,19 +8,12 @@
 	<string>export</string>
 	<key>method</key>
 	<string>development</string>
-	<key>provisioningProfiles</key>
-	<dict>
-		<key>com.finos.lending.merchant</key>
-		<string>MerchantApp_develop</string>
-	</dict>
-	<key>signingCertificate</key>
-	<string>Apple Development</string>
 	<key>signingStyle</key>
-	<string>manual</string>
+	<string>automatic</string>
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
-	<string>95LVK3N9R7</string>
+	<string>V986M848KK</string>
 	<key>thinning</key>
 	<string>&lt;none&gt;</string>
 </dict>
